# XRFrameTools

./: .clang-format  CMakeLists.txt  LICENSE  README.md  XRFrameTools.wprp  vcpkg.json
.github/workflows/: build-and-package.yml  build-installer-generator.yml  build.yml  build64.yml  combine.yml
XRFrameTools-Installer/: .gitignore  CMakeLists.txt  Program.cs  XRFrameTools-Installer.csproj  XRFrameTools-Installer.sln  build.ps1  version.json.in
cmake/: add_copyright_file.cmake  add_version_resource.cmake  hybrid-crt.cmake  output-directories.cmake  version.rc.in
src/: APILayer.in.json  APILayerAPI.hpp  APILayerEntrypoints.inc.cpp  ApiLayerApi.hpp  AutoUpdater.cpp  AutoUpdater.hpp  BinaryLog.hpp  BinaryLogger.cpp  BinaryLogger.hpp  CMakeLists.txt  CheckHResult.hpp  ContiguousRingBuffer.hpp  FrameMetrics.cpp  FrameMetrics.hpp  FrameMetricsStore.cpp  FrameMetricsStore.hpp  FramePerformanceCounters.hpp  GuiMain.cpp  ImGuiHelpers.hpp  ImStackedAreaPlotter.cpp  ImStackedAreaPlotter.hpp  MainWindow.cpp  MainWindow.hpp  MetricsAggregator.cpp  MetricsAggregator.hpp  PerformanceCountersToDuration.hpp  SHM.cpp  SHM.hpp  TestAPILayerEntryPoint.cpp  Version.hpp.in  Window.cpp  Window.hpp  XR_APILAYER_FREDEMMOTT_core_metrics.cpp  XR_APILAYER_FREDEMMOTT_d3d11_metrics.cpp  XR_APILAYER_FREDEMMOTT_d3d11_overlay.cpp  XR_APILAYER_FREDEMMOTT_nvapi_metrics.cpp  app.cmake  binlog-to-csv.cpp  cli.cpp  imgui_impl_win32_headless.cpp  (+1 more)
src/lib/: BinaryLog.hpp  BinaryLogReader.cmake  BinaryLogReader.cpp  BinaryLogReader.hpp  BinaryLogWriter.cmake  BinaryLogWriter.cpp  BinaryLogWriter.hpp  CMakeLists.txt  CSVWriter.cmake  CSVWriter.cpp  CSVWriter.hpp  CheckHResult.hpp  Config.cmake  Config.cpp  Config.hpp  D3D11GpuTimer.cmake  D3D11GpuTimer.cpp  FrameMetrics.cmake  FrameMetrics.cpp  FrameMetrics.hpp  FramePerformanceCounters.hpp  MetricsAggregator.cpp  MetricsAggregator.hpp  PerformanceCounterMath.cpp  PerformanceCounterMath.hpp  PerformanceCounters.cmake  PerformanceCountersToDuration.cpp  SHM.hpp  SHMClient.cmake  SHMClient.cpp  SHMClient.hpp  SHMReader.cmake  SHMReader.cpp  SHMReader.hpp  SHMWriter.cmake  SHMWriter.cpp  SHMWriter.hpp  Version.cmake  Version.hpp.in  Win32Utils.cmake  (+2 more)
src/lib/detail/: GuidParser.hpp
